# demonstrated-feedback

./: .env.example  README.md  generate.py  pyproject.toml  run.sh
configs/: multi_gpu.yaml
examples/: generate_samples.py  run_ditto.py  run_evaluation.py  summarize_result.py
scripts/: callbacks.py  dataset_utils.py  ditto_trainer.py  generate_samples.py  run_ditto.py  sft_trainer.py  utils.py
